# zlog

./: .gitignore  CMakeLists.txt  LICENSE  README.md  uninstall.cmake.in
example/: CMakeLists.txt  main.cpp
src/: log.h  logimpl.cpp  logimpl.h  logstream.cpp  logstream.h
